# pointgrey_camera

./: CMakeLists.txt  README.md
include/: pointgreyStream.h  pointgreyStream.h~
src/: main_script.cpp  main_script_backup_noviceversion.cpp
